--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,15 +51,9 @@ services:
       - "STEAM_VAC=true"
       - "USE_STEAM=true"
     ports:
-      - target: 8766
-        published: 8766
-        protocol: udp
-      - target: 16261
-        published: 16261
-        protocol: udp
-      - target: 27015
-        published: 27015
-        protocol: tcp
+      - 8766:8766/udp
+      - 16261:16261/udp
+      - 27015:27015
     volumes:
       - ./ZomboidDedicatedServer:/home/steam/ZomboidDedicatedServer
       - ./ZomboidConfig:/home/steam/Zomboid/
